Bug: fix scaling on news container tap on iPhone

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -277,12 +277,12 @@ h1 {
   background-color: var(--background-color);
   border-radius: var(--border-radius);
   overflow: auto;
-  transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
   animation: fadeIn 1.5s;
+  transition: transform 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
 }
 
 .newsContainer:hover {
-  transform: scale(1.1);
+  transform: scale(1.1, 1.1);
 }
 
 .newsContainer h3 {
